3.4.0/_sources/gallery/statistics/histogram_multihist.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_statistics_histogram_multihist.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_gallery_statistics_histogram_multihist.py:


=====================================================
The histogram (hist) function with multiple data sets
=====================================================

Plot histogram with multiple sample sets and demonstrate:

* Use of legend with multiple sample sets
* Stacked bars
* Step curve with no fill
* Data sets of different sample sizes

Selecting different bin counts and sizes can significantly affect the
shape of a histogram. The Astropy docs have a great section on how to
select these parameters:
http://docs.astropy.org/en/stable/visualization/histogram.html


.. code-block:: default


    import numpy as np
    import matplotlib.pyplot as plt

    np.random.seed(19680801)

    n_bins = 10
    x = np.random.randn(1000, 3)

    fig, ((ax0, ax1), (ax2, ax3)) = plt.subplots(nrows=2, ncols=2)

    colors = ['red', 'tan', 'lime']
    ax0.hist(x, n_bins, density=True, histtype='bar', color=colors, label=colors)
    ax0.legend(prop={'size': 10})
    ax0.set_title('bars with legend')

    ax1.hist(x, n_bins, density=True, histtype='bar', stacked=True)
    ax1.set_title('stacked bar')

    ax2.hist(x, n_bins, histtype='step', stacked=True, fill=False)
    ax2.set_title('stack step (unfilled)')

    # Make a multiple-histogram of data-sets with different length.
    x_multi = [np.random.randn(n) for n in [10000, 5000, 2000]]
    ax3.hist(x_multi, n_bins, histtype='bar')
    ax3.set_title('different sample sizes')

    fig.tight_layout()
    plt.show()




.. image:: /gallery/statistics/images/sphx_glr_histogram_multihist_001.png
    :alt: bars with legend, stacked bar, stack step (unfilled), different sample sizes
    :class: sphx-glr-single-img





------------

References
""""""""""

The use of the following functions and methods is shown in this example:


.. code-block:: default


    import matplotlib
    matplotlib.axes.Axes.hist
    matplotlib.pyplot.hist




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function hist at 0x7fa7c8646680>




.. _sphx_glr_download_gallery_statistics_histogram_multihist.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: histogram_multihist.py <histogram_multihist.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: histogram_multihist.ipynb <histogram_multihist.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
